# llm_post_train

./: .gitignore  README.md  dpo.py  dpo.sh  ds_config.json  eval.py  eval.sh  eval_lighteval.py  eval_lighteval.sh  pyproject.toml  requirements.txt  sft.py  sft.sh
